# sagemaker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cdk.context.json  cdk_app.py  docker-compose.yaml  env.example  pipeline.py  pyproject.toml  requirements.txt  run  run.sh
container/: Dockerfile
containers/: Dockerfile  Dockerfile.preprocessing  train
containers/inference/: Dockerfile
containers/training/: Dockerfile  Dockerfile.keras.jax  Dockerfile.tf.keras  train
data/: penguins.csv
notebooks/: cohort.ipynb
scripts/: bash-cache.sh  download_data.py  pipeline.py  pipeline.session4.py  pipeline.session5.py  pipeline.session6.py  pipeline.session7a.py  pipeline.session7b.py  pipeline.session9a.py  pipeline.session9b.py  test_endpoint.py
scripts/lambdas/: pipeline_failure_notification_handler.py
scripts/pipelines/: pipeline.session15.py  pipeline.session4.py  pipeline.session5.py  pipeline.session6.py  pipeline.session7a.py  pipeline.session7b.py  pipeline.session9a.py  pipeline.session9b.py  pipeline.session9c.py
src/: cohort.ipynb
src/penguins/: config.py  consts.py  deploy_endpoint.py  evaluate.py  load_data.py  preprocess.py  preprocessor.py  save.py  train.py  utils.py
src/penguins/inference/: entrypoint.py  model_handler.py
src/penguins/utils/: docker.py  get_baseline_accuracy.py
